# Selenium_MCP_FastMCP

./: .env.example  .gitignore  pyproject.toml  requirements.txt  server.py
src/config/: settings.py
src/core/: __init__.py  browser_session.py  exceptions.py  http_client.py  logger.py
src/models/: __init__.py  browser_models.py  github_models.py  writer_models.py
src/tools/: __init__.py  browser.py  github_reader.py  local_writer.py  smart_browser.py
