[project]
name = "selenium-mcp"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "fastmcp",
    "pydantic",
    "pydantic-settings",
    "selenium",
    "webdriver-manager",
    "httpx",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
